2009-06-10  Dean McNamee  <deanm@chromium.org>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=26061
        Make sure filling a canvas pattern with an empty image doesn't crash.


Canonical link: https://commits.webkit.org/36400@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44575 268f45cc-cd09-0410-ab3c-d52691b4dbfc